--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage" : "https://daihanzhu.github.io",
   "dependencies": {
     "classnames": "^2.2.6",
