--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "private": true,
-  "homepage" : "https://daihanzhu.github.io",
+  "private": false,
+  "homepage": "https://daihanzhu.github.io",
   "dependencies": {
     "classnames": "^2.2.6",
+    "gh-pages": "^2.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
