--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gh-pages": "^2.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-ga": "^2.5.3",
     "react-scripts": "1.1.4"
   },
   "scripts": {
