--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-ga": "^2.5.3",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-sizes": "^2.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
